detección del error en la función oxigenación fué reparado incluyendo el valor 500 al rango debido a que no estaba incluido

--- a/extra-addons/sga2/views/views.xml
+++ b/extra-addons/sga2/views/views.xml
@@ -11,7 +11,7 @@
 
         <header>
           <button string="Calcular" name="calcular" type="object"></button>
-          <button string="Valores controlados" name="limpiar" type="object"></button>
+          <button string="Valores controlados" name="controlados" type="object"></button>
         </header>
 
         <sheet>
