--- a/extra-addons/admision/views/views.xml
+++ b/extra-addons/admision/views/views.xml
@@ -1,60 +1,70 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- CADA ID ES UNICO Y SIEMPRE EN MINUSCULA-->
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="admision.list">
-      <field name="name">admision list</field>
-      <field name="model">admision.admision</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
-    -->
+  <!-- Form view -->
+  <record id="admision_form_view" model="ir.ui.view">
+    <field name="name">admision.admision.form.view</field>
+    <field name="model">admision.admision</field>
+    <field name="arch" type="xml">
+      <form string="Admisión">
+        <sheet>
 
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="admision.action_window">
-      <field name="name">admision window</field>
-      <field name="res_model">admision.admision</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
+            <group string="Control de ingreso de pacientes" col="4" colspan="2">
+              <group string="Fecha de admisión" col="4" colspan="2">
+                <field name="fecha_ingreso_uci" string="Fecha de ingreso a UCI"></field>
+              </group>
+              <group string="Datos del paciente" col="4" colspan="2">
+                <field name="datos_paciente"  string='Datos del paciente'></field>
+              </group>
+            </group>
 
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="admision.action_server">
-      <field name="name">admision server</field>
-      <field name="model_id" ref="model_admision_admision"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
+            <group col="4" colspan="2">
 
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="admision" id="admision.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="admision.menu_1" parent="admision.menu_root"/>
-    <menuitem name="Menu 2" id="admision.menu_2" parent="admision.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="admision.menu_1_list" parent="admision.menu_1"
-              action="admision.action_window"/>
-    <menuitem name="Server to list" id="admision" parent="admision.menu_2"
-              action="admision.action_server"/>
-    -->
-  </data>
+              <group string="Examen físico" col="2" colspan="2">
+                <field name="examen_fisico_uci" string="Examen físico de ingreso a UCI"></field>
+              </group>
+           
+              <group string="Evaluación general de admisión" col="2" colspan="2">
+                <field name="evaluacion_general" string="Evaluación general de ingreso"></field>
+              </group>
+            </group>
+
+            
+            <group string="Resumen de ingreso" col="2" colspan="2">
+              <field name="resumen_ingreso" string='Resumen general de ingreso'></field>
+            </group>
+           
+              
+        </sheet>
+      </form>
+    </field>
+  </record>
+
+   <!-- Tree view -->
+   <record id="admision_tree_view" model="ir.ui.view">
+    <field name="name">admision.admision.form.view</field>
+    <field name="model">admision.admision</field>
+    <field name="arch" type="xml">
+      <tree limit="10">
+            <field name="fecha_ingreso_uci"></field>
+            <field name="datos_paciente"></field>
+      </tree>
+    </field>
+  </record>
+  
+  <!-- actions opening views on models -->
+  <record id="action_apache" model="ir.actions.act_window">
+    <field name="name">Control de admisión</field>
+    <field name="type">ir.actions.act_window</field>
+    <field name="res_model">admision.admision</field>
+    <field name="view_mode">tree,form</field>
+  </record>
+
+  <!-- Menú -->
+  <menuitem id="admision_menu_root" name="Pacientes" sequence="1"></menuitem>
+  <menuitem id="admision_menu_category" name="Admisión" sequence="1" parent="admision_menu_root"></menuitem>
+  <menuitem id="action_apache_menu" name="Nuevo ingreso" sequence="1" parent="admision_menu_root" action="action_apache"></menuitem>
+
+  <!-- Acciones de ventana -->
 </odoo>
