cambios en la interfaz de admisión de pacientes y apache II

--- a/extra-addons/sga2/views/views.xml
+++ b/extra-addons/sga2/views/views.xml
@@ -15,12 +15,33 @@
         </header>
         <sheet>
           <!-- Datos del paciente 2c -->
-          <group string="Datos del paciente" col="2" colspan="2">
+          <group col="6" colspan="2" string="Resultados">
+              
+              <group col="2" colspan="2">
+        
+                <field name="aps" help="Sumatoria de todas las variables fisiológicas del paciente" widget="gauge" style="width:120px;height:90px;cursor:pointer;"/>
+               </group>
+
+              <group col="2" colspan="2">
+            
+                 <field name="apache" help="Estado de gravedad del paciente" widget="gauge" style="width:120px;height:90px;cursor:pointer;"/>
+              </group>
+
+              <group col="2" colspan="2">
+              
+                <field name="mortalidad" help="Estimación del porcentaje de mortalidad" widget="gauge" style="width:120px;height:90px;cursor:pointer;"/>
+              </group>
+          </group>
+
+          
+          <group name="contenedor" col="6" colspan="2">
+
+            <group string="Datos del paciente" col="2" colspan="2">
             <field name="fecha_actual" string="Fecha"></field>
             <field name="edad" string="Edad del paciente"></field>
             <field name="enfermedades" help="Enfermedad crónica"></field>
           </group>
-          <group name="contenedor" col="6" colspan="2">
+
             <!-- Controles fisiológicos 2c--> 
             <group string="Variables Fisiológicas" col="2" colspan="2" >
               <field string="Temperatura" name="temperatura" placeholder="Temperatura" help="Temperatura rectal (Axial +0.5°C)"></field>
@@ -45,12 +66,8 @@
               <field name="respuesta_verbal" help='Respuesta verbal.'></field>
             </group>
               <!-- REsultados--> 
-            <group col="2" colspan="2" string="Resultados">
-              <field name="aps" help="Sumatoria de todas las variables fisiológicas del paciente"/>
-              <field name="apache" help="Estado de gravedad del paciente"/>
-              <field name="mortalidad" help="Estimación del porcentaje de mortalidad"/>
-            </group>
           </group>
+          
 
         </sheet>
       </form>
