--- a/extra-addons/admision/views/views.xml
+++ b/extra-addons/admision/views/views.xml
@@ -2,41 +2,57 @@
 
 <!-- CADA ID ES UNICO Y SIEMPRE EN MINUSCULA-->
 <odoo>
+
+
   <!-- Form view -->
   <record id="admision_form_view" model="ir.ui.view">
     <field name="name">admision.admision.form.view</field>
     <field name="model">admision.admision</field>
     <field name="arch" type="xml">
-      <form string="Admisión">
+      <form string="Idea form">
         <sheet>
+          <separator string="Control de Admisión de pacientes" colspan="2"/>  
+          
+          <group col="2" colspan="2">
             <field name="foto" widget="image"></field>
+          </group>
+
+          <group col="2" colspan="2">
+            <separator string="Fecha de ingreso a UCI" colspan="2"/>
+            <field name="fecha_ingreso_uci" string="Fecha de ingreso a UCI" help="Fecha de ingreso a UCI" placeholder="Fecha de ingreso" widget='date'></field>
+          </group>
+
+          <group col="3" colspan="2">
+            <group>
+              <separator string="Examen físico" colspan="2"/>
+              <field name="examen_fisico_uci" string="Examen físico de ingreso a UCI" help="Examen físico de ingreso a UCI" placeholder="Examen físico"></field>
+            </group>
+
+            <group>
+              <separator string="Diagnóstico" colspan="2"/>
+              <field name="diagnostico_uci" string="Diagnóstico de ingreso a UCI" help="Diagnóstico de ingreso a UCI" placeholder="Diagnóstico de ingreso a UCI"></field>
+            </group>
             
-            <group string="Control de ingreso de pacientes" col="4" colspan="2">
-              <group string="Fecha de admisión" col="4" colspan="2">
-                <field name="fecha_ingreso_uci" string="Fecha de ingreso a UCI"></field>
-              </group>
-              <group string="Datos del paciente" col="4" colspan="2">
-                <field name="datos_paciente"  string='Datos del paciente' help="Datos generales del paciente admitido"></field>
-              </group>
+            <group>
+              <separator string="Evaluación" colspan="2"/>
+              <field name="evaluacion_general" string="Evaluación de ingreso" help="Evaluación general de ingreso a UCI" placeholder="Evaluación"></field> 
             </group>
 
-            <group col="4" colspan="2">
+          </group>
+          <notebook colspan="8">
+              <page string="Información personal">
+                  <field name="datos_paciente" string='Datos generales del paciente' help="Datos generales del paciente actual" placeholder="Datos generales del paciente"></field>
+              </page>
 
-              <group string="Examen físico" col="2" colspan="2">
-                <field name="examen_fisico_uci" string="Examen físico de ingreso a UCI"></field>
-              </group>
-           
-              <group string="Evaluación general de admisión" col="2" colspan="2">
-                <field name="evaluacion_general" string="Evaluación general de ingreso"></field>
-              </group>
-            </group>
+              <page string="Resumen de ingreso">
+                  <field name="resumen_ingreso" string='Resumen general de ingreso' placeholder="Resumen"></field>
+              </page>
 
-            
-            <group string="Resumen de ingreso" col="2" colspan="2">
-              <field name="resumen_ingreso" string='Resumen general de ingreso'></field>
-            </group>
-           
-              
+              <page string="Antecedentes">
+                  <field name="antecedentes" string='Antecedentes del paciente' help="Antecedentes" placeholder="Antecedentes del paciente"></field>
+              </page>
+          </notebook>
+      
         </sheet>
       </form>
     </field>
@@ -49,7 +65,7 @@
     <field name="arch" type="xml">
       <tree limit="10">
             <field name="fecha_ingreso_uci"></field>
-            <field name="datos_paciente"></field>
+            <field name="foto"></field>
       </tree>
     </field>
   </record>
@@ -61,7 +77,7 @@
     <field name="res_model">admision.admision</field>
     <field name="view_mode">tree,form</field>
   </record>
-
+  
   <!-- Menú -->
   <menuitem id="admision_menu_root" name="Pacientes" sequence="1"></menuitem>
   <menuitem id="admision_menu_category" name="Admisión" sequence="1" parent="admision_menu_root"></menuitem>
