Mejoras en las interfaces de usuario de los modelos de admisión y uso de widgets especiales

--- a/extra-addons/sga2/views/views.xml
+++ b/extra-addons/sga2/views/views.xml
@@ -26,7 +26,8 @@
       <form string="APACHE_II">
 
         <header>
-          <button string="Generar valores" name="controlados" type="object"></button>
+          <field name="state" invisible="True"></field>
+          <button string="Generar valores" name="controlados" type="object" attrs="{'invisible':[('state','in',['draft'])]}" class="oe_highlight"></button>
           <button string="Obtener resultados" name="calcular" type="object"></button>
           
         </header>
