finalización del cálculo de edad del paciente del registro de admisión

--- a/extra-addons/sga2/views/views.xml
+++ b/extra-addons/sga2/views/views.xml
@@ -26,9 +26,12 @@
       <form string="APACHE_II">
 
         <header>
-          <field name="state" invisible="True"></field>
-          <button string="Generar valores" name="controlados" type="object" attrs="{'invisible':[('state','in',['draft'])]}" class="oe_highlight"></button>
-          <button string="Obtener resultados" name="calcular" type="object"></button>
+          
+          <button string="Generar valores" type="object" name="controlados" state="iniciar" class="oe_highlight"/>
+      
+          <button string="Obtener resultados" type="object" name="calcular" state="finalizar"/>
+          <!--This will create the statusbar, thanks to the widget. -->
+          <field name="state" widget="statusbar" clickable="True" statusbar_visible="iniciar,finalizar"/>
           
         </header>
 
